--- a/extras/resume.html
+++ b/extras/resume.html
@@ -677,6 +677,28 @@ icon.large {
 			</div>
 			<div class="item">
 				<h3 class="name">
+					Airbus Group Innovations, Singapore
+				</h3>
+				<div class="position">
+					<p class="lead">Intern Data Analyst</p>
+				</div>
+				<div class="date">
+					<span class="startDate">
+						Jan 2010
+					</span>
+					<span class="endDate">
+						- Jan 2012
+					</span>
+				</div>
+				<div class="website">
+					<a href="http://ntu.edu.sg">http://ntu.edu.sg</a>
+				</div>
+				<div class="summary">
+					<p>Developed multivariate statistical approaches for helicopter health monitoring.</p>
+				</div>
+			</div>
+			<div class="item">
+				<h3 class="name">
 					Ho Chi Minh City International University
 				</h3>
 				<div class="position">
