--- a/extras/resume.html
+++ b/extras/resume.html
@@ -691,7 +691,7 @@ icon.large {
 					</span>
 				</div>
 				<div class="website">
-					<a href="http://ntu.edu.sg">http://ntu.edu.sg</a>
+					<a href="http://www.airbusgroup.com">http://www.airbusgroup.com</a>
 				</div>
 				<div class="summary">
 					<p>Developed multivariate statistical approaches for helicopter health monitoring.</p>
