--- a/extras/resume.html
+++ b/extras/resume.html
@@ -787,7 +787,7 @@ icon.large {
 			<div class="item">
 				<h3 class="title">Kaggle Inc.</h3>
 				<div class="awarder">
-					<p class="lead">Kaggle Master with the highest global rank of 328th/500k </p>
+					<p class="lead">Kaggle Master with the highest global rank of 294th/500k </p>
 				</div>
 				<div class="date">
 					Feb 2016
@@ -821,7 +821,7 @@ icon.large {
 					<icon class="large entypo-book"></icon>
 				</div>
 				<div class="col-xs-10">
-					<h2 class="section-title">Publications</h2>
+					<h2 class="section-title">Selected Publications</h2>
 				</div>
 			</div>
 		</div>
