--- a/extras/resume.html
+++ b/extras/resume.html
@@ -559,6 +559,30 @@ icon.large {
 		<div class="col-sm-8">
 			<div class="item">
 				<h3 class="name">
+					Visa
+				</h3>
+				<div class="position">
+					<p class="lead">Product Analytics Manager</p>
+				</div>
+				<div class="date">
+					<span class="startDate">
+						August 2016
+					</span>
+					<span class="endDate">
+						- Present
+					</span>
+				</div>
+				<div class="website">
+					<a href="http://www.visa.com">http://www.visa.com</a>
+				</div>
+				<div class="highlights">
+					<ol>
+					  <li>Be responsible for developing Data Analytics solutions to solve complex business problems. </li>
+					  <li>Work with large data sets using quantitative techniques and build complex statistical/machine learning models that learn from big data. </li>
+					 </ol>
+			</div>
+			<div class="item">
+				<h3 class="name">
 					McLaren Applied Technologies
 				</h3>
 				<div class="position">
@@ -569,7 +593,7 @@ icon.large {
 						August 2015
 					</span>
 					<span class="endDate">
-						- Present
+						- August 2016
 					</span>
 				</div>
 				<div class="website">
