--- a/extras/resume.html
+++ b/extras/resume.html
@@ -600,12 +600,12 @@ icon.large {
 					<a href="http://www.mclaren.com/appliedtechnologies">http://www.mclaren.com/appliedtechnologies</a>
 				</div>
 				<div class="highlights">
-					<p>Working on the following projects:</p>
+					<p>Worked for the following projects:</p>
 					<ol>
 					  <li>Predictive Health System</li>
 					  - Develop intelligent models for monitoring asset health of mining trucks.
 					  <li>Life Insights System</li>
-					  -	Developed systems for monitoring human’s health and improving their performance on daily life.
+					  - Developed systems for monitoring human’s health and improving their performance on daily life.
 					  <li>Scheduling for Manufacturing</li>
 					  - Performed scheduling with several complex constraints, including minimizing changeover time, minimizing disposal products, and considering depletion rate.
 					</ol>
