--- a/extras/resume.html
+++ b/extras/resume.html
@@ -557,6 +557,7 @@ icon.large {
 			</div>
 		</div>
 		<div class="col-sm-8">
+			<p class="lead"> Data lover, problem solver, hands-on programmer with a business mindset.</p>
 			<div class="item">
 				<h3 class="name">
 					Visa
@@ -577,8 +578,9 @@ icon.large {
 				</div>
 				<div class="highlights">
 					<ol>
-					  <li>Be responsible for developing Data Analytics solutions to solve complex business problems. </li>
+					  <li>Develop Data Analytics solutions to solve complex business problems.  </li>
 					  <li>Work with large data sets using quantitative techniques and build complex statistical/machine learning models that learn from big data. </li>
+					  <li>Hands-on experience on SAS, Hadoop, Hive, R, Python, and Tableau. </li>
 					 </ol>
 			</div>
 			<div class="item">
@@ -976,7 +978,7 @@ icon.large {
 			</div>
 			<div class="item">
 				<blockquote class="reference">
-					"Long displayed a tremendous amount of dedicaiton to his work. He demonstrated strong can-do attitude and versality in picking up data mining as well as in working with me on an industrial project on health monitoring. His programming skill was excellent too as he was able to quickly understand open source codes and modify them for the project."
+					"Long displayed a tremendous amount of dedication to his work. He demonstrated strong can-do attitude and versality in picking up data mining as well as in working with me on an industrial project on health monitoring. His programming skill was excellent too as he was able to quickly understand open source codes and modify them for the project."
 				</blockquote>
 				<div class="name">
 					— David Woon, Head of Operations at Airbus Group Innovations, Singapore
