--- a/extras/resume.html
+++ b/extras/resume.html
@@ -973,7 +973,7 @@ icon.large {
 					Dr. Long is a very good team player and had excellent relations with colleagues. He also showed very good team leadership and project management skills. He not only managed his team well by balancing workload for team members based on their skill sets, but also ensured delivery of projects on-time."
 				</blockquote>
 				<div class="name">
-					— Dr. Shonali Krishnaswamy, Head of Data Analytics Department, I²R, A*STAR, Singapore
+					— Dr. Shonali Krishnaswamy, Head of Data Analytics Department, I²R, A*STAR, Singapore <a href="../extras/Reference%20letter_Shonali.pdf">(See certificate)</a> 
 				</div>
 			</div>
 			<div class="item">
@@ -981,7 +981,7 @@ icon.large {
 					"Long displayed a tremendous amount of dedication to his work. He demonstrated strong can-do attitude and versality in picking up data mining as well as in working with me on an industrial project on health monitoring. His programming skill was excellent too as he was able to quickly understand open source codes and modify them for the project."
 				</blockquote>
 				<div class="name">
-					— David Woon, Head of Operations at Airbus Group Innovations, Singapore
+					— David Woon, Head of Operations at Airbus Group Innovations, Singapore <a href="../extras/Reference%20letter_David%20Woon.pdf">(See certificate)</a> 
 				</div>
 			</div>
 		</div>
