--- a/extras/resume.html
+++ b/extras/resume.html
@@ -557,7 +557,7 @@ icon.large {
 			</div>
 		</div>
 		<div class="col-sm-8">
-			<p class="lead"> Data lover, problem solver, hands-on programmer with a business mindset.</p>
+			<p class="lead"> Data enthusiast, problem solver, Kaggle master with a business mindset.</p>
 			<div class="item">
 				<h3 class="name">
 					Visa
@@ -811,6 +811,24 @@ icon.large {
 		</div>
 		<div class="col-sm-8">
 			<div class="item">
+				<h3 class="title">LookSeeWellington career trip</h3>
+				<div class="awarder">
+					<p class="lead">One of top 93 candidates from more than 48k technical applicants <a href="https://www.youtube.com/watch?v=kg1zwPdnLl8">(link)</a>, <a href=""../extras/LookSee_group.jpg">(photo)</a>. </p>
+				</div>
+				<div class="date">
+					2017
+				</div>
+			</div>
+			<div class="item">
+				<h3 class="title">Visa’s Go-Share program </h3>
+				<div class="awarder">
+					<p class="lead"> Visa’s Go-Share program to Dubai for high performance staff in order to exchange experience and skillsets.</p>
+				</div>
+				<div class="date">
+					2017
+				</div>
+			</div>
+			<div class="item">
 				<h3 class="title">Kaggle Inc.</h3>
 				<div class="awarder">
 					<p class="lead">Kaggle Master with the highest global rank of 294th/500k </p>
@@ -973,7 +991,7 @@ icon.large {
 					Dr. Long is a very good team player and had excellent relations with colleagues. He also showed very good team leadership and project management skills. He not only managed his team well by balancing workload for team members based on their skill sets, but also ensured delivery of projects on-time."
 				</blockquote>
 				<div class="name">
-					— Dr. Shonali Krishnaswamy, Head of Data Analytics Department, I²R, A*STAR, Singapore <a href="../extras/Reference%20letter_Shonali.pdf">(See certificate)</a> 
+					— Dr. Shonali Krishnaswamy, Head of Data Analytics Department, I²R, A*STAR, Singapore <a href="../extras/Reference%20letter_Shonali.pdf">(letter)</a> 
 				</div>
 			</div>
 			<div class="item">
@@ -981,7 +999,7 @@ icon.large {
 					"Long displayed a tremendous amount of dedication to his work. He demonstrated strong can-do attitude and versality in picking up data mining as well as in working with me on an industrial project on health monitoring. His programming skill was excellent too as he was able to quickly understand open source codes and modify them for the project."
 				</blockquote>
 				<div class="name">
-					— David Woon, Head of Operations at Airbus Group Innovations, Singapore <a href="../extras/Reference%20letter_David%20Woon.pdf">(See certificate)</a> 
+					— David Woon, Head of Operations at Airbus Group Innovations, Singapore <a href="../extras/Reference%20letter_David%20Woon.pdf">(letter)</a> 
 				</div>
 			</div>
 		</div>
