--- a/extras/resume.html
+++ b/extras/resume.html
@@ -813,7 +813,7 @@ icon.large {
 			<div class="item">
 				<h3 class="title">LookSeeWellington career trip</h3>
 				<div class="awarder">
-					<p class="lead">One of top 93 candidates from more than 48k technical applicants <a href="https://www.youtube.com/watch?v=kg1zwPdnLl8">(link)</a>, <a href=""../extras/LookSee_group.jpg">(photo)</a>. </p>
+					<p class="lead">One of top 93 candidates from more than 48k technical applicants <a href="https://www.youtube.com/watch?v=kg1zwPdnLl8">(link)</a>, <a href="../extras/LookSee_group.jpg">(photo)</a>.</p>
 				</div>
 				<div class="date">
 					2017
