--- a/extras/resume.html
+++ b/extras/resume.html
@@ -644,7 +644,7 @@ icon.large {
 					-	Methodology: Anomaly detection, one-class classification, Java, Matlab.
 					<li>Wattalyzer – Member</li>
 					-	Developed an integrated solution for smart grid condition monitoring through advanced sensing and real-time analytics.<br>  
-					-	Deployed active learning to significantly reduce expensive labeling cost.<br> 
+					-	Deployed active learning to significantly reduce expensive labeling cost. The algorithm was published in IEEE Prognostics and Health Management (PHM), 2015. <a href="http://ieeexplore.ieee.org/abstract/document/7245026/">(link)</a>, <a href="../extras/PHM201518-PID3747977.pdf">(pdf)</a><br> 
 					-	Methodology: Data stream analytics, Java, R, MySQL.
 					<li>Churn Prediction for Telco – Member </li>
 					-	Developed a novel technique to process terabytes of customers’ data for churn prediction.<br> 
@@ -653,7 +653,7 @@ icon.large {
 
 					<li>Location Profiling for Mobile Phone Data – Member</li>
 					-	Developed simple-yet-elegant algorithms for places of interest using terabytes of call details data. <br> 
-					-	The algorithm was later published in IEEE Mobile Data Management, 2014.<br> 
+					-	The algorithm was later published in IEEE Mobile Data Management, 2014. <a href="http://ieeexplore.ieee.org/abstract/document/6916873/">(link)</a>, <a href="../extras/HuMoComp.pdf">(pdf)</a><br> 
 					-	Methodology: Frequent pattern analysis, Java, Multithreading.
 				</ol>
 			</div>
