--- a/extras/resume.html
+++ b/extras/resume.html
@@ -526,7 +526,7 @@ icon.large {
 						<section id="location">
 							<icon class="entypo-home"></icon>
 							<span class="address">
-								Tiong Barhu, Singapore
+								Sillicon Valley, CA, USA
 								<br/>
 							</span>
 						</section>
@@ -557,7 +557,11 @@ icon.large {
 			</div>
 		</div>
 		<div class="col-sm-8">
-			<p class="lead"> Data enthusiast, problem solver, Kaggle master with a business mindset.</p>
+			<p class="lead"> Data enthusiast, problem solver, Kaggle master with a business mindset. </br>
+			Dr. Long NGUYEN is currently a Product Analytics Manager at Visa company. He has more than nine years’ experience working on machine learning and data science. He also has two additional years working as a software engineer. </br>
+			He has strong interests in how to apply machine learning into real industries with big data. He has successfully worked for several industrial projects with significant funding for large multi-national corporations such as banks, telcos, consulting firms and energy corporations. Moreover, he has published scientific papers in reputed conferences and journals. His research interests include time series mining, data stream mining, big data, and condition-based monitoring.
+
+			</p>
 			<div class="item">
 				<h3 class="name">
 					Visa
@@ -588,7 +592,7 @@ icon.large {
 					McLaren Applied Technologies
 				</h3>
 				<div class="position">
-					<p class="lead">Data Scientist</p>
+					<p class="lead">Sr. Data Scientist</p>
 				</div>
 				<div class="date">
 					<span class="startDate">
