Update my title

--- a/extras/resume.html
+++ b/extras/resume.html
@@ -558,10 +558,33 @@ icon.large {
 		</div>
 		<div class="col-sm-8">
 			<p class="lead"> Data enthusiast, problem solver, Kaggle master with a business mindset. </br>
-			Dr. Long NGUYEN is currently a Product Analytics Manager at Visa company. He has more than nine years’ experience working on machine learning and data science. He also has two additional years working as a software engineer. </br>
+			Dr. Long NGUYEN is currently a Director - Data Science at Visa Inc. company. He has more than nine years’ experience working on machine learning and data science. He also has two additional years working as a software engineer. </br>
 			He has strong interests in how to apply machine learning into real industries with big data. He has successfully worked for several industrial projects with significant funding for large multi-national corporations such as banks, telcos, consulting firms and energy corporations. Moreover, he has published scientific papers in reputed conferences and journals. His research interests include time series mining, data stream mining, big data, and condition-based monitoring.
 
 			</p>
+			<div class="item">
+				<h3 class="name">
+					Visa
+				</h3>
+				<div class="position">
+					<p class="lead">Director - Data Science</p>
+				</div>
+				<div class="date">
+					<span class="startDate">
+						June 2019
+					</span>
+					<span class="endDate">
+						- Present
+					</span>
+				</div>
+				<div class="website">
+					<a href="http://www.visa.com">http://www.visa.com</a>
+				</div>
+				<div class="highlights">
+					<ol>
+					Design and deploy highly innovative ML models from Visa's unique global data. Analyze and extract key insights for a variety of applications, issuers and merchants. Promote new methodology and best practices in the field of data analytics.
+					 </ol>
+			</div>
 			<div class="item">
 				<h3 class="name">
 					Visa
@@ -574,7 +597,7 @@ icon.large {
 						August 2016
 					</span>
 					<span class="endDate">
-						- Present
+						- June 2019
 					</span>
 				</div>
 				<div class="website">
