Update GC status

--- a/extras/resume.html
+++ b/extras/resume.html
@@ -530,6 +530,13 @@ icon.large {
 								<br/>
 							</span>
 						</section>
+						<section id="location">
+							<icon class="entypo-home"></icon>
+							<span class="address">
+								US Green Card holder
+								<br/>
+							</span>
+						</section>
 						<section id="profiles">
 							<div class="item">
 								<a href="https://sg.linkedin.com/in/nguyenhailongphd">
